methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:26: error: Unmatched closing brace '}' ignored here
}
^